[tool.poetry]
name = "ernestas-biblioteka"
version = "0.1.0"
description = ""
authors = ["ErnestasZ <ernestas.zemaitis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
